dart/cpp/public/filament-dart.h

typedef struct Engine *EngineRef;
typedef struct LightManager *LightManagerRef;
///
/// Math types
///

typedef struct {
  float x;
  float y;
  float z;
} Vector3, *Vector3Ref;
typedef struct {
  float x;
  float y;
  float z;
  float w;
} Vector4, *Vector4Ref;
Vector3     filament_indirect_light_get_direction_estimate(float* sh, int shCount, Vector3 direction);
Vector4     filament_indirect_light_get_color_estimate(Vector4 colorIntensity, float* sh, int shCount, float x, float y, float z);
///
/// LightManager
///
LightManagerRef     filament_engine_get_light_manager(EngineRef engine);
int                 filament_light_manager_get_component_count(LightManagerRef lightManager);
int                 filament_light_manager_has_component(LightManagerRef lightManager, int entity);
int                 filament_light_manager_get_instance(LightManagerRef lightManager, int entity);
void                filament_light_manager_destroy(LightManagerRef lightManager, int entity);
int                 filament_light_manager_get_type(LightManagerRef lightManager, int entityInstance);
void                filament_light_manager_set_light_channel(LightManagerRef lightManager, int entityInstance, int channel, int enabled);
int                 filament_light_manager_get_light_channel(LightManagerRef lightManager, int entityInstance, int channel);
void                filament_light_manager_set_position(LightManagerRef lightManager, int entityInstance, double posX, double posY, double posZ);
void                filament_light_manager_get_position(LightManagerRef lightManager, int entityInstance, Vector3* result);
void                filament_light_manager_set_direction(LightManagerRef lightManager, int entityInstance, double dirX, double dirY, double dirZ);
void                filament_light_manager_get_direction(LightManagerRef lightManager, int entityInstance, Vector3* result);
void                filament_light_manager_set_color(LightManagerRef lightManager, float colorR, float colorG, float colorB);
void                filament_light_manager_get_color(LightManagerRef lightManager, Vector3* result);
void                filament_light_manager_set_intensity(LightManagerRef lightManager, int entityInstance, float intensity);
float               filament_light_manager_get_intensity(LightManagerRef lightManager, int entityInstance);
void                filament_light_manager_set_falloff(LightManagerRef lightManager, int entityInstance, float falloff);
float               filament_light_manager_get_falloff(LightManagerRef lightManager, int entityInstance);