dart/filament/lib/src/generated/native_gen.dart


  late final _filament_indirect_light_get_direction_estimatePtr = _lookup<
      ffi.NativeFunction<
          Vector3 Function(ffi.Pointer<ffi.Float>, ffi.Int32,
              Vector3)>>('filament_indirect_light_get_direction_estimate');
  late final _filament_indirect_light_get_direction_estimate =
      _filament_indirect_light_get_direction_estimatePtr
          .asFunction<Vector3 Function(ffi.Pointer<ffi.Float>, int, Vector3)>();

  Vector4 filament_indirect_light_get_color_estimate(
    Vector4 colorIntensity,
    ffi.Pointer<ffi.Float> sh,
    int shCount,
    double x,
    double y,
    double z,
  ) {
    return _filament_indirect_light_get_color_estimate(
      colorIntensity,
      sh,
      shCount,
      x,
      y,
      z,
    );
  }

  late final _filament_indirect_light_get_color_estimatePtr = _lookup<
      ffi.NativeFunction<
          Vector4 Function(
              Vector4,
              ffi.Pointer<ffi.Float>,
              ffi.Int32,
              ffi.Float,
              ffi.Float,
              ffi.Float)>>('filament_indirect_light_get_color_estimate');
  late final _filament_indirect_light_get_color_estimate =
      _filament_indirect_light_get_color_estimatePtr.asFunction<
          Vector4 Function(
              Vector4, ffi.Pointer<ffi.Float>, int, double, double, double)>();

  /// LightManager
  LightManagerRef filament_engine_get_light_manager(
    EngineRef engine,
  ) {
    return _filament_engine_get_light_manager(
      engine,
    );
  }

  late final _filament_engine_get_light_managerPtr =
      _lookup<ffi.NativeFunction<LightManagerRef Function(EngineRef)>>(
          'filament_engine_get_light_manager');
  late final _filament_engine_get_light_manager =
      _filament_engine_get_light_managerPtr
          .asFunction<LightManagerRef Function(EngineRef)>();

  int filament_light_manager_get_component_count(
    LightManagerRef lightManager,
  ) {
    return _filament_light_manager_get_component_count(
      lightManager,
    );
  }

  late final _filament_light_manager_get_component_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(LightManagerRef)>>(
          'filament_light_manager_get_component_count');
  late final _filament_light_manager_get_component_count =
      _filament_light_manager_get_component_countPtr
          .asFunction<int Function(LightManagerRef)>();

  int filament_light_manager_has_component(
    LightManagerRef lightManager,
    int entity,
  ) {
    return _filament_light_manager_has_component(
      lightManager,
      entity,
    );
  }

  late final _filament_light_manager_has_componentPtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(LightManagerRef, ffi.Int32)>>(
      'filament_light_manager_has_component');
  late final _filament_light_manager_has_component =
      _filament_light_manager_has_componentPtr
          .asFunction<int Function(LightManagerRef, int)>();

  int filament_light_manager_get_instance(
    LightManagerRef lightManager,
    int entity,
  ) {
    return _filament_light_manager_get_instance(
      lightManager,
      entity,
    );
  }

  late final _filament_light_manager_get_instancePtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(LightManagerRef, ffi.Int32)>>(
      'filament_light_manager_get_instance');
  late final _filament_light_manager_get_instance =
      _filament_light_manager_get_instancePtr
          .asFunction<int Function(LightManagerRef, int)>();

  void filament_light_manager_destroy(
    LightManagerRef lightManager,
    int entity,
  ) {
    return _filament_light_manager_destroy(
      lightManager,
      entity,
    );
  }

  late final _filament_light_manager_destroyPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(LightManagerRef, ffi.Int32)>>(
      'filament_light_manager_destroy');
  late final _filament_light_manager_destroy =
      _filament_light_manager_destroyPtr
          .asFunction<void Function(LightManagerRef, int)>();

  int filament_light_manager_get_type(
    LightManagerRef lightManager,
    int entityInstance,
  ) {
    return _filament_light_manager_get_type(
      lightManager,
      entityInstance,
    );
  }

  late final _filament_light_manager_get_typePtr = _lookup<
          ffi.NativeFunction<ffi.Int32 Function(LightManagerRef, ffi.Int32)>>(
      'filament_light_manager_get_type');
  late final _filament_light_manager_get_type =
      _filament_light_manager_get_typePtr
          .asFunction<int Function(LightManagerRef, int)>();

  void filament_light_manager_set_light_channel(
    LightManagerRef lightManager,
    int entityInstance,
    int channel,
    int enabled,
  ) {
    return _filament_light_manager_set_light_channel(
      lightManager,
      entityInstance,
      channel,
      enabled,
    );
  }

  late final _filament_light_manager_set_light_channelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(LightManagerRef, ffi.Int32, ffi.Int32,
              ffi.Int32)>>('filament_light_manager_set_light_channel');
  late final _filament_light_manager_set_light_channel =
      _filament_light_manager_set_light_channelPtr
          .asFunction<void Function(LightManagerRef, int, int, int)>();

  int filament_light_manager_get_light_channel(
    LightManagerRef lightManager,
    int entityInstance,
    int channel,
  ) {
    return _filament_light_manager_get_light_channel(
      lightManager,
      entityInstance,
      channel,
    );
  }

  late final _filament_light_manager_get_light_channelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(LightManagerRef, ffi.Int32,
              ffi.Int32)>>('filament_light_manager_get_light_channel');
  late final _filament_light_manager_get_light_channel =
      _filament_light_manager_get_light_channelPtr
          .asFunction<int Function(LightManagerRef, int, int)>();

  void filament_light_manager_set_position(
    LightManagerRef lightManager,
    int entityInstance,
    double posX,
    double posY,
    double posZ,
  ) {
    return _filament_light_manager_set_position(
      lightManager,
      entityInstance,
      posX,
      posY,
      posZ,
    );
  }

  late final _filament_light_manager_set_positionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(LightManagerRef, ffi.Int32, ffi.Double, ffi.Double,
              ffi.Double)>>('filament_light_manager_set_position');
  late final _filament_light_manager_set_position =
      _filament_light_manager_set_positionPtr.asFunction<
          void Function(LightManagerRef, int, double, double, double)>();

  void filament_light_manager_get_position(
    LightManagerRef lightManager,
    int entityInstance,
    ffi.Pointer<Vector3> result,
  ) {
    return _filament_light_manager_get_position(
      lightManager,
      entityInstance,
      result,
    );
  }

  late final _filament_light_manager_get_positionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(LightManagerRef, ffi.Int32,
              ffi.Pointer<Vector3>)>>('filament_light_manager_get_position');
  late final _filament_light_manager_get_position =
      _filament_light_manager_get_positionPtr.asFunction<
          void Function(LightManagerRef, int, ffi.Pointer<Vector3>)>();

  void filament_light_manager_set_direction(
    LightManagerRef lightManager,
    int entityInstance,
    double dirX,
    double dirY,
    double dirZ,
  ) {
    return _filament_light_manager_set_direction(
      lightManager,
      entityInstance,
      dirX,
      dirY,
      dirZ,
    );
  }

  late final _filament_light_manager_set_directionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(LightManagerRef, ffi.Int32, ffi.Double, ffi.Double,
              ffi.Double)>>('filament_light_manager_set_direction');
  late final _filament_light_manager_set_direction =
      _filament_light_manager_set_directionPtr.asFunction<
          void Function(LightManagerRef, int, double, double, double)>();

  void filament_light_manager_get_direction(
    LightManagerRef lightManager,
    int entityInstance,
    ffi.Pointer<Vector3> result,
  ) {
    return _filament_light_manager_get_direction(
      lightManager,
      entityInstance,
      result,
    );
  }

  late final _filament_light_manager_get_directionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(LightManagerRef, ffi.Int32,
              ffi.Pointer<Vector3>)>>('filament_light_manager_get_direction');
  late final _filament_light_manager_get_direction =
      _filament_light_manager_get_directionPtr.asFunction<
          void Function(LightManagerRef, int, ffi.Pointer<Vector3>)>();

  void filament_light_manager_set_color(
    LightManagerRef lightManager,
    double colorR,
    double colorG,
    double colorB,
  ) {
    return _filament_light_manager_set_color(
      lightManager,
      colorR,
      colorG,
      colorB,
    );
  }

  late final _filament_light_manager_set_colorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(LightManagerRef, ffi.Float, ffi.Float,
              ffi.Float)>>('filament_light_manager_set_color');
  late final _filament_light_manager_set_color =
      _filament_light_manager_set_colorPtr
          .asFunction<void Function(LightManagerRef, double, double, double)>();

  void filament_light_manager_get_color(
    LightManagerRef lightManager,
    ffi.Pointer<Vector3> result,
  ) {
    return _filament_light_manager_get_color(
      lightManager,
      result,
    );
  }

  late final _filament_light_manager_get_colorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(LightManagerRef,
              ffi.Pointer<Vector3>)>>('filament_light_manager_get_color');
  late final _filament_light_manager_get_color =
      _filament_light_manager_get_colorPtr
          .asFunction<void Function(LightManagerRef, ffi.Pointer<Vector3>)>();

  void filament_light_manager_set_intensity(
    LightManagerRef lightManager,
    int entityInstance,
    double intensity,
  ) {
    return _filament_light_manager_set_intensity(
      lightManager,
      entityInstance,
      intensity,
    );
  }

  late final _filament_light_manager_set_intensityPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(LightManagerRef, ffi.Int32,
              ffi.Float)>>('filament_light_manager_set_intensity');
  late final _filament_light_manager_set_intensity =
      _filament_light_manager_set_intensityPtr
          .asFunction<void Function(LightManagerRef, int, double)>();

  double filament_light_manager_get_intensity(
    LightManagerRef lightManager,
    int entityInstance,
  ) {
    return _filament_light_manager_get_intensity(
      lightManager,
      entityInstance,
    );
  }

  late final _filament_light_manager_get_intensityPtr = _lookup<
          ffi.NativeFunction<ffi.Float Function(LightManagerRef, ffi.Int32)>>(
      'filament_light_manager_get_intensity');
  late final _filament_light_manager_get_intensity =
      _filament_light_manager_get_intensityPtr
          .asFunction<double Function(LightManagerRef, int)>();

  void filament_light_manager_set_falloff(
    LightManagerRef lightManager,
    int entityInstance,
    double falloff,
  ) {
    return _filament_light_manager_set_falloff(
      lightManager,
      entityInstance,
      falloff,
    );
  }

  late final _filament_light_manager_set_falloffPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(LightManagerRef, ffi.Int32,
              ffi.Float)>>('filament_light_manager_set_falloff');
  late final _filament_light_manager_set_falloff =
      _filament_light_manager_set_falloffPtr
          .asFunction<void Function(LightManagerRef, int, double)>();

  double filament_light_manager_get_falloff(
    LightManagerRef lightManager,
    int entityInstance,
  ) {
    return _filament_light_manager_get_falloff(
      lightManager,
      entityInstance,
    );
  }
